--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         }
         #output div {
     white-space: pre-wrap;
-    overflow-y: scroll;
+    overflow-y: auto;
     line-height: 1.6;
     font-size: 15px;
     margin-bottom: 8px;
