--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 }
         #output {
             flex-grow: 1;
-            overflow-y: scroll;
+            overflow-y: auto;
             margin-bottom: 10px;
             line-height: 1.5;
         }
